# BepInEx.GUIwithoutpause

./: .gitignore
BepInEx.GUI.Loader/: BepInEx.GUI.Loader.sln
BepInEx.GUI.Loader/src/: BepInEx.GUI.Loader.csproj  Config.cs  EntryPoint.cs  EventArgsPatchTest.cs  Log.cs  LogPacket.cs  PowerShell.Designer.cs  PowerShell.resx  SendLogToClientSocket.cs
BepInEx.GUI.Loader/src/Instances/Instances/: IProcessInstance.cs  IProcessResult.cs  Instance.cs  ProcessArguments.cs  ProcessInstance.cs  ProcessResult.cs
BepInEx.GUI.Loader/src/Instances/Instances.Tests/: Tests.cs
BepInEx.GUI.Loader/src/Instances/Instances/Exceptions/: InstanceException.cs  InstanceFileNotFoundException.cs  InstanceProcessAlreadyExitedException.cs
Thunderstore/: README.md  manifest.json
bepinex_gui/: Cargo.toml  build.rs
bepinex_gui/src/: app.rs  main.rs  theme.rs
bepinex_gui/src/backend/: file_explorer_utils.rs  mod.rs  panic_handler.rs  reset_app_if_window_hang.rs
bepinex_gui/src/backend/network/: packet_protocol.rs
bepinex_gui/src/backend/process/: mod.rs
bepinex_gui/src/backend/thunderstore/: api.rs
bepinex_gui/src/backend/window/: mod.rs  window_topmost_on_target_start.rs
bepinex_gui/src/config/: launch.rs
bepinex_gui/src/data/: bepinex_mod.rs  mod.rs
bepinex_gui/src/data/bepinex_log/: file.rs  mod.rs  receiver.rs
bepinex_gui/src/logger/: mod.rs
bepinex_gui/src/views/: components.rs  disclaimer.rs  mod.rs
bepinex_gui/src/views/tabs/: console.rs  general.rs
bepinex_gui/src/views/utils/: mod.rs
