[package]
name = "bepinex_gui"
version = "3.1.0"
authors = ["Cats Army", "Original auther: Risk of Thunder"]
license = "MIT"
description = "Graphical User Interface meant to replace the regular console host that is used by BepInEx"
edition ="2021"
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "Lethal Company.exe"
ProductName = "Lethal Company"
FileDescription = "Lethal Company.exe"
LegalCopyright = "Risk of Thunder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/xiaoxiao921/egui/", features = ["persistence"] }
serde = { version = "1.0.198", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
byteorder = "1.5.0"
clipboard = "0.5.0"
directories-next = "2.0.0"
serde_json = "1.0.116"
#Do not update reqwest it will cause issues  // Even the patches will do it...
reqwest = { version = "0.11.17", features = ["blocking", "gzip"] } 
winapi = {version = "0.3.9", features = ["tlhelp32"] }
strum = { version = "0.26.2", features = ["derive"] }
zip = "0.6.6"
sysinfo = "0.30.10"
crossbeam-channel = "0.5.12"
image = "0.25.1"
kernel32-sys = "0.2.2"

# all of this is taken from https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true # perform "fat" LTO which attempts to perform optimizations across all crates within the dependency graph.
codegen-units = 1 # improve the performance of generated code, but may be slower to compile.
panic = "abort" # dont unwind, dont care